--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,9 @@
     <string name="dates">Dates</string>
     <string name="category">Category</string>
     <string name="submit">Submit</string>
+    <string name="starttime">Start Time</string>
+    <string name="endtime">End Time</string>
+    <string name="startdate">Start Date</string>
+    <string name="enddate">End Date</string>
 
 </resources>
