--- a/calendarEvent/res/values/strings.xml
+++ b/calendarEvent/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="dates">Dates</string>
     <string name="category">Category</string>
     <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
     <string name="starttime">Start Time</string>
     <string name="endtime">End Time</string>
     <string name="startdate">Start Date</string>
