--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="category">Category</string>
     <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
-    <string name="starttime">Start Time</string>
-    <string name="endtime">End Time</string>
-    <string name="startdate">Start Date</string>
-    <string name="enddate">End Date</string>
+    <string name="starttime">Start Time (HH:MM am/pm)</string>
+    <string name="endtime">End Time (HH:MM am/pm)</string>
+    <string name="startdate">Start Date (mm/dd/yyyy)</string>
+    <string name="enddate">End Date (mm/dd/yyyy)</string>
 
 </resources>
